--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,8 +65,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - asset/images/forest.png
-     - asset/images/hqbackground.png
+     - images/forest.png
+     - images/hqbackground.png
+     - images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
