--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,9 +65,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/forest.png
-     - images/hqbackground.png
-     - images/logo.png
+    - images/chatterlogo.jpeg
+    - images/forest.png
+    - images/logo.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
